--- a/views/partials/ficha/historia/fobias.ejs
+++ b/views/partials/ficha/historia/fobias.ejs
@@ -1,5 +1,5 @@
 <!-- Fobias e Manias -->
 <div class="col-12 col-md-6 mb-3">
     <label for="persona-fob">Fobias e Manias</label>
-    <textarea class="form-control" name="historia.fobias" id="persona-fob" rows="4" placeholder="Suas fobias e manias..."></textarea>
+    <textarea class="form-control" name="historia.fobias" id="persona-fob" rows="4" placeholder="Suas fobias e manias..."><%= historia?.fobias ?? '' %></textarea>
 </div>
