--- a/views/partials/ficha/historia/historia.ejs
+++ b/views/partials/ficha/historia/historia.ejs
@@ -4,5 +4,5 @@
         <h3>História</h3>
         <div class="container">
             <label for="persona-hist">Minha história</label>
-            <textarea class="form-control" name="historia.backstory" id="persona-hist" placeholder="Quem é você?"></textarea>
+            <textarea class="form-control" name="historia.backstory" id="persona-hist" placeholder="Quem é você?"><%= historia?.backstory ?? '' %></textarea>
         </div>
