--- a/views/partials/ficha/historia/pessoas.ejs
+++ b/views/partials/ficha/historia/pessoas.ejs
@@ -1,5 +1,5 @@
 <!-- Pessoas significantes -->
 <div class="col-12 col-md-6 mb-3">
     <label for="persona-signi">Pessoas significantes</label>
-    <textarea class="form-control" name="historia.pessoas" id="persona-signi" rows="4" placeholder="Pessoas que significam algo, seja bom ou ruim..."></textarea>
+    <textarea class="form-control" name="historia.pessoas" id="persona-signi" rows="4" placeholder="Pessoas que significam algo, seja bom ou ruim..."><%= historia?.pessoas ?? '' %></textarea>
 </div>
