--- a/views/partials/ficha/historia/inventario.ejs
+++ b/views/partials/ficha/historia/inventario.ejs
@@ -1,5 +1,5 @@
 <!-- Inventário -->
 <div class="col-12 col-md-6 mb-3">
     <label for="persona-inv">Inventário</label>
-    <textarea class="form-control" name="historia.inventario" id="persona-inv" rows="4" placeholder="O que você tem, o que você usa..."></textarea>
+    <textarea class="form-control" name="historia.inventario" id="persona-inv" rows="4" placeholder="O que você tem, o que você usa..."><%= historia?.inventario ?? '' %></textarea>
 </div>
