--- a/views/partials/ficha/tab-habilidades.ejs
+++ b/views/partials/ficha/tab-habilidades.ejs
@@ -1,3 +1,12 @@
+<%
+    const habilidadesData = habilidades || {};
+%>
+
+<script>
+    // Mesmo que o editor veja isto como um erro, o código está funcionando.
+    const habilidadesData = <%- JSON.stringify(habilidadesData) %>;
+</script>
+
 <!-- Habilidades -->
 <div class="container mt-5">
     <h3>Habilidades</h3>
