Botões de navegação adicionados; erro encontrado: ao criar uma ficha com uma checkbox marcada, um erro de cast ocorre

--- a/views/lista-fichas.ejs
+++ b/views/lista-fichas.ejs
@@ -2,7 +2,14 @@
 
 <body class="bg-image-old-paper mt-5" style="overflow: hidden;">
 <div class="container">
-    <h2>Fichas criadas</h2>
+    <div class="row align-items-center">
+        <div class="col">
+            <h2>Fichas criadas</h2>
+        </div>
+        <div class="col text-center my-4">
+            <a href="/" class="btn btn-danger" style="background-color: #813a3a; border-color: #813a3a;">Menu</a>
+        </div>
+    </div>
     <br>
 
     <% if (sheets.length > 0) { %>
