--- a/views/partials/ficha/caracteristicas/informacoes.ejs
+++ b/views/partials/ficha/caracteristicas/informacoes.ejs
@@ -10,6 +10,12 @@
         <div class="col text-center my-4">
             <button type="submit" class="btn btn-primary" style="background-color:#3a5f81; border-color: #3a5f81;">Salvar Ficha</button>
         </div>
+        <div class="col text-center my-4">
+            <a href="/" class="btn btn-danger" style="background-color: #813a3a; border-color: #813a3a;">Menu</a>
+        </div>
+        <div class="col text-center my-4">
+        <a href="/fichas" class="btn btn-secondary" style="background-color: #4a4a4a; border-color: #4a4a4a;">Fichas criadas</a>
+        </div>
     </div>
     <br>
 
