--- a/views/lista-fichas.ejs
+++ b/views/lista-fichas.ejs
@@ -1,6 +1,6 @@
 <%- include('./partials/head') %>
 
-<body class="bg-image-old-paper mt-5" style="overflow: hidden;">
+<body class="bg-image-old-paper mt-5" style="overflow-y: auto;">
 <div class="container">
     <div class="row align-items-center">
         <div class="col">
