--- a/views/partials/ficha/caracteristicas/informacoes.ejs
+++ b/views/partials/ficha/caracteristicas/informacoes.ejs
@@ -5,18 +5,36 @@
     <!-- Título da Ficha -->
     <div class="row align-items-center">
         <div class="col">
-            <h2>Investigador</h2>
+          <h2>Investigador</h2>
         </div>
-        <div class="col text-center my-4">
-            <button type="submit" class="btn btn-primary" style="background-color:#3a5f81; border-color: #3a5f81;">Salvar Ficha</button>
+      
+        <div class="col-auto text-end">
+          <button 
+            type="submit" 
+            class="btn btn-primary me-2" 
+            style="background-color:#3a5f81; border-color:#3a5f81;"
+          >
+            Salvar Ficha
+          </button>
+      
+          <a 
+            href="/" 
+            class="btn btn-danger me-2" 
+            style="background-color:#813a3a; border-color:#813a3a;"
+          >
+            Menu
+          </a>
+      
+          <a 
+            href="/fichas" 
+            class="btn btn-secondary" 
+            style="background-color:#4a4a4a; border-color:#4a4a4a;"
+          >
+            Fichas criadas
+          </a>
         </div>
-        <div class="col text-center my-4">
-            <a href="/" class="btn btn-danger" style="background-color: #813a3a; border-color: #813a3a;">Menu</a>
-        </div>
-        <div class="col text-center my-4">
-        <a href="/fichas" class="btn btn-secondary" style="background-color: #4a4a4a; border-color: #4a4a4a;">Fichas criadas</a>
-        </div>
-    </div>
+      </div>
+      
     <br>
 
     <div class="persona-info">
