--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,7 +1,13 @@
 /*Margem para o final da página e fonte*/
 
+html, body {
+  height: 100%;
+  margin: 0;
+  padding: 0;
+}
+
 body {
-  margin-bottom: 15px;
+  margin-bottom: 20px;
   font-family: 'Special Elite', cursive;
 }
 
@@ -14,13 +20,15 @@ body {
   background-repeat: no-repeat;
 }
 
-/*background de sobre e contato*/
+/*background de sobre e contato e listas das fichas*/
 
 .bg-image-old-paper {
   background-image: url("/images/old-paper-background.jpg");
   background-size: 100% auto;
-  background-position: center;
+  background-position: center top;
   background-repeat: repeat-y;
+  background-attachment: fixed;
+  min-height: 100vh;
 }
 
 .bg-image-ficha {
