--- a/views/partials/ficha/caracteristicas/informacoes.ejs
+++ b/views/partials/ficha/caracteristicas/informacoes.ejs
@@ -5,7 +5,7 @@
     <!-- Título da Ficha -->
     <div class="row align-items-center">
         <div class="col">
-          <h2>Investigador</h2>
+          <h2>Ficha de Investigador</h2>
         </div>
       
         <div class="col-auto text-end">
